// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadingBlock matches snapshot correctly 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <h1
    as="h1"
    data-node-view-content=""
    style="white-space: pre-wrap;"
  />
</div>
`;

exports[`HeadingBlock renders correspond heading according to level 1`] = `
<div
  data-node-view-wrapper=""
  style="pointer-events: none; white-space: normal;"
>
  <h2
    as="h2"
    data-node-view-content=""
    style="white-space: pre-wrap;"
  />
</div>
`;
